Fix of the dependencies, better replica script
- create files after the directories are being created
- ownership and location of the replica script - only root can execute it

--- a/templates/replication_node/create_clean_replica.sh.erb
+++ b/templates/replication_node/create_clean_replica.sh.erb
@@ -1,19 +1,17 @@
-echo Stopping PostgreSQL
 sudo service postgresql stop
-
+echo
 echo Cleaning up old cluster directory
-rm -rf /var/lib/postgresql/<%= @version %>/main
-
+sudo -u postgres rm -rf /var/lib/postgresql/<%= @version %>/main
+echo
 echo Starting base backup as replicator
-pg_basebackup -h <%= @peer_name %> -D /var/lib/postgresql/<%= @version %>/main -U replicator -v -P
-
+sudo -u postgres pg_basebackup -h <%= @peer_name %> -D /var/lib/postgresql/<%= @version %>/main -U replicator -v -P
+echo
 echo Writing recovery.conf file
-bash -c "cat > /var/lib/postgresql/<%= @version %>/main/recovery.conf <<- _EOF1_
+sudo -u postgres bash -c "cat > /var/lib/postgresql/<%= @version %>/main/recovery.conf <<- _EOF1_
 standby_mode = 'on'
 primary_conninfo = 'host=<%= @peer_name %> user=replicator sslmode=require'
 trigger_file = '/tmp/postgresql.trigger'
 _EOF1_
 "
-
-echo Startging PostgreSQL
+echo
 sudo service postgresql start
